maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:6: error: '<-' expected but ')' found.
    for(j<0 to getMondeHauteur-1){
                                ^ShortestPathMaze:12: error: illegal start of simple expression
  }
  ^