maze.shortestpath.ShortestPathMaze.scala.code
var x = 0
var y = 0
override def run() {
  for(i<-0 to getMondeLargeur-1){
    for(j<0 to getMondeHauteur-1){
      if(aBiscuit(i,j)){
        x=i
        y=j
      }
    }
  }
  setIndication(x,y,0)
}